# compilador-bminor

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: bminor.md
examples/: good0.bminor  good1.bminor  good2.bminor  good4.bminor  good5.bminor  good6.bminor  minimal.bp  parser.bp  sieve.bp
scripts/: check_examples.sh
src/proyect/: logging_config.py  main.py
src/proyect/ast_visualizer/: __init__.py  graphviz_renderer.py  tree_renderer.py
src/proyect/lexer/: __init__.py  lexer.py  models.py
src/proyect/parser/: __init__.py  models.py  parser.py
src/proyect/semantic/: __init__.py  checker.py  models.py  symtab.py  typesys.py
src/proyecto/: main.py
tests/: test_ast_visualizer.py  test_lexer.py  test_parser.py  test_semantic.py
