[project]
name = "proyect"
version = "0.1.0"
description = "Base project for compiler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.9.0,<14.0.0",
    "graphviz>=0.20.3,<0.21.0",
    "multimethod>=1.12,<2.0",
    "loguru>=0.7.2,<0.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0,<1.0.0",
    "pytest>=8.4.0,<9.0.0",
]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
extraPaths = ["src"]

[[tool.basedpyright.executionEnvironments]]
root = "."
extraPaths = ["src"]
